--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^2.13.2",
+    "antd": "^3.0.2",
     "autoprefixer": "7.1.2",
     "axios": "^0.16.2",
     "babel-core": "6.25.0",
@@ -37,9 +37,9 @@
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
     "prop-types": "^15.6.0",
-    "react": "^15.6.1",
+    "react": "16.2.0",
     "react-dev-utils": "^3.1.0",
-    "react-dom": "^15.6.1",
+    "react-dom": "^16.2.0",
     "react-error-overlay": "^1.0.10",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
