--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
     "prop-types": "^15.6.0",
-    "react": "16.2.0",
+    "react": "^16.2.0",
     "react-dev-utils": "^3.1.0",
     "react-dom": "^16.2.0",
     "react-error-overlay": "^1.0.10",
