--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "jquery": "^3.2.1",
     "less-loader": "^4.0.5",
     "moment": "^2.19.2",
     "node-sass-chokidar": "0.0.3",
@@ -107,5 +108,5 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "https://x-crm.i-counting.cn/"
+  "proxy": "https://p-crm.i-counting.cn/"
 }
