--- a/package.json
+++ b/package.json
@@ -108,5 +108,5 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "https://p-crm.i-counting.cn/"
+  "proxy": "https://x-crm.i-counting.cn/"
 }
